src/test/deca/context/invalid/if-int-cond.context
if-int-cond.deca:11: